<resources>
    <integer name="input_producto_descripcion_counterMaxLenthg">255</integer>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="app_name">Paladium</string>
    <string name="btn_Editar">EDITAR</string>
    <string name="btn_Eliminar">ELIMINAR</string>
    <string name="btn_Guardar">GUARDAR</string>

    <string name="btn_actualizar">ACTUALIZAR DATOS</string>

    <string name="btn_categoria_TODO">TODO</string>

    <string name="seleccione">Seleccione…</string>
    <string name="producto_input_error_codBarras">Este código ya está registrado.</string>
    <string name="producto_input_error_cantidad">Ingrese una cantidad</string>
    <string name="producto_input_error_nombre">Ingrese nombre del producto</string>
    <string name="producto_input_error_precio">Ingrese precio del producto</string>
    <string name="producto_input_error_costo">Ingrese el costo del producto</string>

    <string name="producto_input_error_categoria">Escoja categoría para el producto</string>
    <string name="progressdialog_CARGANDO">Cargando…</string>
    <string name="progressdialog_crear_producto_mensaje">Añadiendo producto…</string>

    <string name="progressdialog_actualizar_producto_mensaje">Actualizando datos…</string>
    <string name="alertdialog_titulo_EXITO">ÉXITO</string>
    <string name="alertdialog_titulo_ERROR">!ERROR¡</string>
    <string name="alertdialog_titulo_INFORMACION">! INFORMACIÓN ¡</string>
    <string name="alertdialog_titulo_ADVERTENCIA">!ADVERTENCIA¡</string>
    <string name="alertdialog_titulo_ATENCION">!ATENCIÓN¡</string>
    <string name="alertdialog_producto_btn_OK">OK</string>
    <string name="alertdialog_producto_btn_CONTINUAR">CONTINUAR…</string>

    <string name="alertdialog_producto_btn_CANCEL">CANCELAR</string>
    <string name="alertdialog_crear_producto_mensaje_EXITO">Se añadió el producto al registro.</string>

    <string name="alertdialog_crear_producto_mensaje_ERROR">Ocurrió un error al registrar el producto. Inténteno nuevamente.</string>
    <string name="alertdialog_crear_producto_mensaje_INFORMACION_QRImageCodeNotFound">No se logró identificar un código.\nPosiblemente no se aprecie bien el código dentro de la imagen.</string>

    <string name="alertdialog_crear_producto_mensaje_INFORMACION_FileNotFound">Ocurrió un error al recuperar la imagen.\nInténtelo nuevamente.</string>
    <string name="alertdialog_crear_producto_mensaje_INFORMACION_ProductoRepetido">Se encontraron productos similares.\n\nPorfavor, compruebe que el producto que intenta registrar no esté repetido.</string>

    <string name="alertdialog_crear_producto_mensaje_INFORMACION_ProductoRepetido_DeseaContinuar">¿Desea continuar con el resgitro?</string>
    <string name="alertdialog_actualizar_producto_mensaje_EXITO">Se actualizó el registro.</string>
    <string name="alertdialog_actualizar_producto_mensaje_ERROR">Ocurrió un error al actualizar el producto. Inténtelo nuevamente.</string>
    <string name="alertdialog_actualizar_producto_mensaje_INFORMACION_ProductoRepetido">Se encontraron productos similares.\n\nPorfavor, compruebe que el producto que intenta actualizar no esté repetido.</string>


    <string name="alertdialog_actualizar_producto_mensaje_INFORMACION_ProductoRepetido_DeseaContinuar">¿Desea continuar y actualizarlo?</string>
    <string name="alertdialog_borrar_producto_mensaje_EXITO">Se borró el producto del registro.</string>
    <string name="alertdialog_borrar_producto_mensaje_ERROR">Ocurrió un error al borrar el producto.</string>

    <string name="alertdialog_borrar_producto_mensaje_ADVENTENCIA">¿Está seguro de querer eliminar el producto?</string>
    <string name="producto_Cod_barras">Código de barras</string>
    <string name="producto_Cod_barras_MetodoScan">Seleccione un método para escanear el código:</string>
    <string name="producto_Cod_barras_Galeria">Escanear mediante imagen.</string>
    <string name="producto_Cod_barras_Camara">Escanear mediante cámara.</string>
    <string name="producto_Cod_barras_GenerarQRCode">Generar código QR.</string>

    <string name="producto_Cod_barras_GenerarBarCode">Generar código de barras.</string>
    <string name="producto_Imagen_MetodoImagen">Seleccione un método para cargar la imagen:</string>
    <string name="producto_Imagen_URLImagenInternet">Imagen desde URL.</string>

    <string name="producto_Imagen_Galeria">Imagen desde galería.</string>
    <string name="producto_Cantidad">Cantidad disponible</string>
    <string name="producto_Nombre">Nombre</string>
    <string name="producto_Precio">Precio Unitario</string>
    <string name="producto_Costo">Costo Unitario</string>
    <string name="producto_Categoria">Categoría</string>


    <string name="producto_Descripcion">Descripción</string>
    <string name="input_text_helper_text_requrido">Requerido*</string>

</resources>