<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="@color/alert_info_color_background"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/alertdialog_titulo_INFORMACION"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:srcCompat="@drawable/baseline_informacion2_icon_48dp"/>

            <TextView
                android:id="@+id/custom_dialog_information_productos_repetidos_tvMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="4dp"
                android:text="@string/alertdialog_crear_producto_mensaje_INFORMACION_ProductoRepetido"
                android:gravity="center|left"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="135dp"
                android:minHeight="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/custom_dialog_information_productos_repetidos_listView"
                        android:layout_width="match_parent"
                        android:layout_height="135dp" />

                </LinearLayout>

            </ScrollView>


            <TextView
                android:id="@+id/custom_dialog_information_productos_repetidos_tvMensaje2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center|left"
                android:text="@string/alertdialog_crear_producto_mensaje_INFORMACION_ProductoRepetido_DeseaContinuar"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/custom_dialog_information_productos_repetidos_btnCancelar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/red_darker"
                    android:text="@string/alertdialog_producto_btn_CANCEL"
                    android:textSize="13sp"
                    app:cornerRadius="@dimen/corner_radius"/>

                <Button
                    android:id="@+id/custom_dialog_information_productos_repetidos_btnOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="@string/alertdialog_producto_btn_CONTINUAR"
                    android:textSize="13sp"
                    app:cornerRadius="@dimen/corner_radius" />

            </LinearLayout>



        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>