<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bottom_sheet_dialog_qrbarcode_scan_background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lines="2"
            android:textColor="?attr/color_texto_normal"
            android:textSize="16sp"
            android:text="@string/producto_Cod_barras_MetodoScan"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/custom_bottom_sheet_dialog_qrbarcode_scan_imgbtnGaleria"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/baseline_photo_library_black_48dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/producto_Cod_barras_Galeria"
                    android:textSize="16sp"
                    android:textColor="?attr/color_texto_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/custom_bottom_sheet_dialog_qrbarcode_scan_imgbtnCamara"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/baseline_camera_alt_green_black_48dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/producto_Cod_barras_Camara"
                    android:textSize="16sp"
                    android:textColor="?attr/color_texto_normal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/custom_bottom_sheet_dialog_qrbarcode_scan_imgbtGenerarQRCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/baseline_qr2_48px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/producto_Cod_barras_GenerarQRCode"
                    android:textSize="16sp"
                    android:textColor="?attr/color_texto_normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="15dp">

                <ImageButton
                    android:id="@+id/custom_bottom_sheet_dialog_qrbarcode_scan_imgbtGenerarBarCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@drawable/barcode_48dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/producto_Cod_barras_GenerarBarCode"
                    android:textSize="16sp"
                    android:textColor="?attr/color_texto_normal" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>