<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:padding="10dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:background="@color/alert_warning_color_background"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/alertdialog_titulo_ADVERTENCIA"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:srcCompat="@drawable/baseline_caution_icon"/>

            <TextView
                android:id="@+id/custom_dialog_warning_tvMensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:lines="2"
                android:textColor="@color/white"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/custom_dialog_warning_btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/alertdialog_producto_btn_CANCEL"
                    android:textSize="16sp"
                    android:backgroundTint="@color/red_darker"
                    app:cornerRadius="@dimen/corner_radius"/>

                <Button
                    android:id="@+id/custom_dialog_warning_btnOk"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/alertdialog_producto_btn_OK"
                    android:textSize="16sp"
                    app:cornerRadius="@dimen/corner_radius"/>

            </LinearLayout>





        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>